--- a/config.toml
+++ b/config.toml
@@ -6,12 +6,53 @@ DefaultContentLanguage = "en"
 [blackfriday]
 angledQuotes = false
 
-[languages]
 [languages.en]
-copyright= "my copyright"
+copyright = "my copyright"
+
+[[languages.en.menu.lang]]
+url = "/fr"
+name = "fr"
+weight = 0
+pre= "/"
+
+[[languages.en.menu.lang]]
+url = "/"
+name = "en"
+weight = 0
+
+[[languages.en.menu.main]]
+url = "/contact"
+name = "contact"
+weight = 0
+
+[[languages.en.menu.main]]
+url = "/reading"
+name = "reading"
+weight = 0
 
 [languages.fr]
 copyright= ""
 
-[languages.fr.blackfriday]
+[[languages.fr.menu.lang]]
+url = "/fr"
+name = "fr"
+weight = 0
+pre = "/"
+
+[[languages.fr.menu.lang]]
+url = "/"
+name = "en"
+weight = 0
+
+[[languages.fr.menu.main]]
+url = "/fr/contact"
+name = "contact"
+weight = 0
+
+[[languages.fr.menu.main]]
+url = "/fr/lecture"
+name = "lecture"
+weight = 0
+
+[[languages.fr.blackfriday]]
 angledQuotes = true
