--- a/config.toml
+++ b/config.toml
@@ -51,6 +51,17 @@ parent = "writing"
 weight = 0
 
 [[languages.en.menu.main]]
+name = "speaking"
+identifier = "speaking"
+weight = 3
+
+[[languages.en.menu.main]]
+url = "/talks"
+name = "talks"
+parent = "speaking"
+weight = 0
+
+[[languages.en.menu.main]]
 name = "about"
 identifier = "about"
 weight = 0
