fix config: basename src for output txt

--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ isHTML = true
 
 [outputFormats.Txt]
 name = "txt"
-baseName = "index"
+baseName = "src"
 mediaType = "text/plain"
 isPlainText = true
 
