--- a/config.toml
+++ b/config.toml
@@ -69,6 +69,12 @@ parent = "writing"
 weight = 0
 
 [[languages.en.menu.main]]
+url = "/blog"
+name = "blog"
+parent = "writing"
+weight = 0
+
+[[languages.en.menu.main]]
 name = "speaking"
 identifier = "speaking"
 weight = 3
@@ -132,6 +138,12 @@ weight = 2
 [[languages.fr.menu.main]]
 url = "https://github.com/edouardparis"
 name = "code"
+parent = "écrits"
+weight = 0
+
+[[languages.fr.menu.main]]
+url = "/fr/blog"
+name = "blog"
 parent = "écrits"
 weight = 0
 
