--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,11 @@ DefaultContentLanguage = "en"
 pluralizeListTitles = false
 enableGitInfo = true
 
+[markup]
+[markup.tableOfContents]
+endLevel = 3
+startLevel = 1
+
 [taxonomies]
 tag = "tags"
 topic = "topics"
@@ -37,7 +42,7 @@ isPlainText = true
  section = ["HTML", "txt"]
 
 [languages.en]
-redirect = "Read this page in your terminal with the command: <br /> **$ curl -L edouard.paris**"
+redirect = "Read this page in your terminal with the command:"
 copyright = "2020 EdouardParis."
 description = "Edouard Paris personal website"
 
@@ -54,15 +59,8 @@ weight = 0
 
 
 [[languages.en.menu.main]]
-url = "/reading"
-name = "reading"
-identifier = "reading"
-weight = 1
-
-[[languages.en.menu.main]]
-url = "/reading/books"
-name = "books"
-parent = "reading"
+url = "/readings"
+name = "readings"
 weight = 0
 
 [[languages.en.menu.main]]
@@ -70,60 +68,8 @@ name = "writing"
 identifier = "writing"
 weight = 2
 
-[[languages.en.menu.main]]
-url = "https://github.com/edouardparis"
-name = "code"
-parent = "writing"
-weight = 0
-
-[[languages.en.menu.main]]
-url = "/blog"
-name = "blog"
-parent = "writing"
-weight = 0
-
-[[languages.en.menu.main]]
-name = "speaking"
-identifier = "speaking"
-weight = 3
-
-[[languages.en.menu.main]]
-url = "/talks"
-name = "talks"
-parent = "speaking"
-weight = 0
-
-[[languages.en.menu.main]]
-name = "about"
-identifier = "about"
-weight = 0
-
-[[languages.en.menu.main]]
-url = "/cv"
-name = "cv"
-parent = "about"
-weight = 0
-
-[[languages.en.menu.main]]
-url = "/contact"
-name = "contact"
-parent = "about"
-weight = 0
-
-[[languages.en.menu.main]]
-url = "/blog/hello-world"
-name = "website"
-parent = "about"
-weight = 0
-
-[[languages.en.menu.main]]
-url = "https://tippin.me/@edouardparis"
-name = "tip ⚡ "
-parent = "about"
-weight = 0
-
 [languages.fr]
-redirect = "Lisez cette page dans un terminal avec la commande: <br /> **$ curl -L edouard.paris**"
+redirect = "Lisez cette page dans un terminal avec la commande:"
 copyright = "2020 EdouardParis."
 description = "Site web personnel de Edouard Paris"
 
@@ -137,53 +83,6 @@ pre = "/"
 url = "/"
 name = "en"
 weight = 0
-
-[[languages.fr.menu.main]]
-url = "/fr/reading"
-name = "lecture"
-identifier = "lecture"
-weight = 1
-
-[[languages.fr.menu.main]]
-url = "/fr/reading/books"
-name = "livres"
-parent = "lecture"
-weight = 0
-
-[[languages.fr.menu.main]]
-name = "écrits"
-identifier = "écrits"
-weight = 2
-
-[[languages.fr.menu.main]]
-url = "https://github.com/edouardparis"
-name = "code"
-parent = "écrits"
-weight = 0
-
-[[languages.fr.menu.main]]
-url = "/fr/blog"
-name = "blog"
-parent = "écrits"
-weight = 0
-
-[[languages.fr.menu.main]]
-name = "à propos"
-identifier = "a-propos"
-weight = 0
-
-[[languages.fr.menu.main]]
-url = "/fr/contact"
-name = "contact"
-parent = "a-propos"
-weight = 0
-
-[[languages.fr.menu.main]]
-url = "https://tippin.me/@edouardparis"
-name = "tip ⚡ "
-parent = "a-propos"
-weight = 0
-
 
 [[languages.fr.blackfriday]]
 angledQuotes = true
