--- a/config.toml
+++ b/config.toml
@@ -33,11 +33,11 @@ isPlainText = true
 [outputs]
  home = ["HTML", "txt"]
  page = ["HTML", "txt"]
- section = ["HTML", "txt"]
+ section = ["HTML", "txt", "RSS"]
 
 [languages.en]
 redirect = "Read this page in your terminal with the command:"
-copyright = "2020 EdouardParis."
+copyright = "2023 EdouardParis."
 description = "Edouard Paris personal website"
 
 [[languages.en.menu.lang]]
@@ -64,7 +64,7 @@ weight = 2
 
 [languages.fr]
 redirect = "Lisez cette page dans un terminal avec la commande:"
-copyright = "2020 EdouardParis."
+copyright = "2023 EdouardParis."
 description = "Site web personnel de Edouard Paris"
 
 [[languages.fr.menu.lang]]
