--- a/config.toml
+++ b/config.toml
@@ -9,6 +9,20 @@ enableGitInfo = true
 [markup.tableOfContents]
 endLevel = 3
 startLevel = 1
+[markup.highlight]
+anchorLineNos = false
+codeFences = true
+guessSyntax = false
+hl_Lines = ''
+hl_inline = false
+lineAnchors = ''
+lineNoStart = 1
+lineNos = false
+lineNumbersInTable = true
+noClasses = true
+noHl = false
+style = 'lovelace'
+tabWidth = 4
 
 [taxonomies]
 tag = "tags"
